update: stream 연습문제